# miniengine

./: .gitignore  CMakeLists.txt
include/: Mesh.h  Object.h  Shader.h  ShaderProgram.h
include/Physics/: ElectricalObject.h  PhysicsObject.h  PhysicsProperties.h
include/buffer_objects/: ElementBufferObject.h  IBufferObject.h  VertexArrayObject.h  VertexBufferObject.h
shaders/: basic.frag  basic.vert
src/: Mesh.cpp  Object.cpp  Shader.cpp  ShaderProgram.cpp  main.cpp
src/buffer_objects/: ElementBufferObject.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
